external-crates/move/crates/move-compiler/tests/move_2024/typing/invalid_deprecation_attributes.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E10004]: invalid usage of known attribute
  ┌─ tests/move_2024/typing/invalid_deprecation_attributes.move:2:7
  │
2 │     #[deprecated = b"This is a deprecated function"]
  │       ^^^^^^^^^^ Invalid 'deprecated' attribute
  │
  = Deprecation attributes must be written as `#[deprecated]` or `#[deprecated(note = b"message")]`

error[E10004]: invalid usage of known attribute
  ┌─ tests/move_2024/typing/invalid_deprecation_attributes.move:5:7
  │
5 │     #[deprecated(msg = b"This is a deprecated function")]
  │       ^^^^^^^^^^ Invalid 'deprecated' attribute
  │
  = Deprecation attributes must be written as `#[deprecated]` or `#[deprecated(note = b"message")]`

error[E10004]: invalid usage of known attribute
  ┌─ tests/move_2024/typing/invalid_deprecation_attributes.move:8:7
  │
8 │     #[deprecated(b"This is a deprecated function")]
  │       ^^^^^^^^^^ Invalid 'deprecated' attribute
  │
  = Deprecation attributes must be written as `#[deprecated]` or `#[deprecated(note = b"message")]`

error[E01002]: unexpected token
  ┌─ tests/move_2024/typing/invalid_deprecation_attributes.move:8:18
  │
8 │     #[deprecated(b"This is a deprecated function")]
  │                  ^ Unexpected '<ByteString>'. Expected attribute

error[E10004]: invalid usage of known attribute
   ┌─ tests/move_2024/typing/invalid_deprecation_attributes.move:11:7
   │
11 │     #[deprecated(note = b"This is a deprecated function", other = b"other")]
   │       ^^^^^^^^^^ Invalid 'deprecated' attribute
   │
   = Deprecation attributes must be written as `#[deprecated]` or `#[deprecated(note = b"message")]`

error[E10004]: invalid usage of known attribute
   ┌─ tests/move_2024/typing/invalid_deprecation_attributes.move:14:7
   │
14 │     #[deprecated(note = 123)]
   │       ^^^^^^^^^^ Invalid 'deprecated' attribute
   │
   = Deprecation attributes must be written as `#[deprecated]` or `#[deprecated(note = b"message")]`

warning[W02018]: unknown attribute
   ┌─ tests/move_2024/typing/invalid_deprecation_attributes.move:17:7
   │
17 │     #[deprication]
   │       ^^^^^^^^^^^ Unknown attribute 'deprication'. Custom attributes must be wrapped in 'ext', e.g. #[ext(deprication)]

error[E10004]: invalid usage of known attribute
   ┌─ tests/move_2024/typing/invalid_deprecation_attributes.move:20:7
   │
20 │     #[deprecated(foo)]
   │       ^^^^^^^^^^ Invalid 'deprecated' attribute
   │
   = Deprecation attributes must be written as `#[deprecated]` or `#[deprecated(note = b"message")]`
